Create docker-compose e inclusão mysql na solução

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,24 @@ services:
       volumes: 
         - ./node:/usr/src/app
       tty: true
+      depends_on: 
+        - db
   
+  db:
+      image: mysql:5.7               
+      command: --innodb-use-native-aio=0
+      container_name: db    
+      restart: always
+      tty: true
+      volumes:
+        - ./mysql/scripts/initdb.sql:/docker-entrypoint-initdb.d/1.sql
+        - ./mysql/arquivos:/var/lib/mysql
+      environment: 
+        - MYSQL_DATABASE=nodedb
+        - MYSQL_ROOT_PASSWORD=root
+      networks :
+        - node-network
+    
 
   nginx:
       build: 
